style.css
body {
    color: black;
    font-size: 1.75vw;
}

.logoCol {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.logo {
    width: 90%;
    height: 80%;
    object-fit: contain;
    margin: 5%;
    margin-top: 10%;
}

.sloganCol {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.slogan1 {
    color: #ab85cc;
    font-family: "Kaushan Script", serif;
    font-weight: 400;
    font-style: normal;
    font-size: 4vw;
}

.slogan2 {
    font-weight: bold;
    font-size: 4vw;
}

.menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 25px;
    padding: 10%;
}

.menuItem {
    display: flex;
    width: 100%;
    max-width: 500px;
}

.itemImgCol {
    display: flex;
    justify-content: flex-end;
    width: 30%;
    height: 30%;
}

.itemImg {
    aspect-ratio: 1;
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 12%;       
}

.itemName {
    font-weight: bold;
    font-size: 2.5vw;
    margin-bottom: 0px;
}

.addItemButtonCol {
    display: flex;
    justify-content: flex-end;
    align-self: center;
}

.addItemButton {
    background-color: rgb(227, 227, 227);
    color: black;
    font-weight: 500;
    border: none;
    border-radius: 25px / 25px;
    padding: 1px 16px;
    font-size: 1.75vw; /* Adjust font size */
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
}

